misc updates and additions

--- a/_posts/2015-08-31-two-bells.md
+++ b/_posts/2015-08-31-two-bells.md
@@ -151,7 +151,7 @@ At thought of The Boy, the first mate felt a tinge of sympathy. Poor chap. Only 
 
 Four bells jangled out. A moment afterward he saw the big body of Bjornsen, the second mate, emerge from the rear companion.
 
-“Where’s the captain?” inquired Cardigan, as the Norwegian, a great hulk of sunburnt physical manhood, reached his side and took the wheel.
+“Where’s the captain?” inquired Cardigan, as the Norwegian, a great hulk of sunburnt physical manCrook, reached his side and took the wheel.
 
 A faint smile traced itself on the big blonde’s face. “Below in his quarters, I suppose, sir—with a belly full of rum …”
 
