--- a/_posts/2015-08-26-dog-biter.md
+++ b/_posts/2015-08-26-dog-biter.md
@@ -8,7 +8,7 @@ date: 2015-08-26
 categories: short-stories
 excerpt: “When a man dies, my dear Hawke,” said Dr. Wilthorpe, lighting a cigar, “he usually gives up playing the fool, but not so Alderman Wickham."
 image: /assets/img/dog-biter.svg
-genre: Professional
+genre: Professional Sleuth
 wordcount: 3184
 timetoread: EST TIME TO READ
 kindle: LINK TO KINDLE
