--- a/_posts/2015-08-26-dog-biter.md
+++ b/_posts/2015-08-26-dog-biter.md
@@ -20,13 +20,13 @@ epub: LINK TO EPUB
     <h6>Table of Contents</h6>
   </header>
 <div id="drawer" markdown="1">
-*  Auto generated table of contents
+1. Auto generated table of contents
 {:toc}
 </div>
 </section> <!-- table-of-contents -->
 
 ###Introduction
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 “When a man dies, my dear Hawke,” said Dr. Wilthorpe, lighting a cigar, “he usually gives up playing the fool, but not so Alderman Wickham.
 
@@ -64,10 +64,10 @@ The doctor thoughtfully paced the study floor for a moment.
 <hr>
 
 ###Chapter 1
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###At Myrtle Lodge
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 Hawke and Tommy were in no need of an excuse for entry to Myrtle Lodge, the home of the late Alderman Wickham. The place was full of people when they arrived.
 
@@ -141,10 +141,10 @@ Hawke was frowning thoughtfully at his informant.
 <hr>
 
 ###Chapter 2
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###The Man with the Whip
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 Jackson’s view of Arnold Wickham was confirmed, on their return to Myrtle Lodge, by members of the party there.
 
@@ -174,10 +174,10 @@ The lady turned to talk to someone else.
 <hr>
 
 ###Chapter 3
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###A Biter Bit!
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 Ditchley was a little-known village some twenty miles away, and they found Arnold Wickham’s place after some difficulty.
 
@@ -237,10 +237,10 @@ Hawke and Tommy, after an exchange of questioning glances, followed him.
 <hr>
 
 ###Chapter 4
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###“Untoward Circumstances”
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 Within the brightly-lit and well-furnished sitting-room Hawke handed over his card. It had an electric effect on the man. “A detective!” he shouted in an oddly gleeful manner. “You’re investigating the circumstances of my brother’s death, eh? Now sit down there at the table and let’s listen to your deductions. Was he murdered? He ought to have been, of course, but the point is, was he?”
 
@@ -322,10 +322,10 @@ Hawke shook his head.
 <hr>
 
 ###Chapter 5
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###Gentle Pete!
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 Arnold Wickham seemed to be quite despondent when Hawke was leaving.
 
