--- a/_posts/2015-08-31-two-bells.md
+++ b/_posts/2015-08-31-two-bells.md
@@ -20,7 +20,7 @@ epub: LINK TO EPUB
     <h6>Table of Contents</h6>
   </header>
 <div id="drawer" markdown="1">
-*  Auto generated table of contents
+1. Auto generated table of contents
 {:toc}
 </div>
 </section> <!-- table-of-contents -->
@@ -29,10 +29,10 @@ epub: LINK TO EPUB
 <hr>
 
 ###Chapter 1
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###The Avenger
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 At two bells The Boy determined to commit murder.
 
@@ -136,10 +136,10 @@ He rose, the movement bringing into visible play the thick, heavy-corded muscles
 <hr>
 
 ###Chapter 2
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###Dead About An Hour
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 The sharp cutwater of the Libertine broke the phosphorus into javelins of green brilliancy, her yards, slightly checked, ran with easy motions beneath bellied topsail, while the deck-timbers creaked and groaned as the vessel wallowed in the heavy sea.
 
@@ -259,10 +259,10 @@ He smiled grimly. “All right, men; below with him.”
 <hr>
 
 ###Chapter 3
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###The Thing
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 In the very midst of a dream The Boy was shot into consciousness. For a moment he could not remember where he was. He seemed to be caught in the teeth of a monster that shook him horribly, mercilessly. Half-remembered objects separated themselves from the chaos and he heard a distant voice pronouncing his name. Yet for some inexplicable reason he was unable to reply.
 
@@ -390,10 +390,10 @@ Then the world reeled, a drunken universe—
 <hr>
 
 ###Chapter 4
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###Off The Course
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 A knock on the door of his quarters brought Cardigan out of a light sleep. Sitting up on the edge of his bunk he called, “Come in!”
 
@@ -601,10 +601,10 @@ Dark sluicegates closed upon him.
 <hr>
 
 ###Chapter 5
-{: .chapternumber}
+{: .chapternumber .no_toc}
 
 ###Do Dead Men Laugh
-{: .chaptertitle .no_toc}
+{: .chapternumber }
 
 “’Ere she goes, mateys—look!”
 
