--- a/_posts/2015-08-26-fear.md
+++ b/_posts/2015-08-26-fear.md
@@ -32,7 +32,7 @@ epub: LINK TO EPUB
 {: .chapternumber .no_toc}
 
 ###A Long Story
-{: .chapternumber }
+{: .chaptertitle }
 
 Hartley Brentwood, of Barnes, Brentwood and Company, was found in his apartment at 6 o’clock in the morning with a bullet wound in his head and a half-smoked cigarette in his fingers.
 
@@ -59,7 +59,7 @@ Thorne looked at him a moment, then leaned over and unlocked the cuffs.
 {: .chapternumber .no_toc}
 
 ###I Didn’t Argue
-{: .chapternumber }
+{: .chaptertitle }
 
 Fifteen years ago my firm was Landis and Barnes. We were bankers and brokers of the old school. At least Landis was. Conservative, more conservative than there was any need for. We had a safe business, but there was nothing in it. When I had started in as a clerk for old man Landis my one ambition had been to get in the firm. He was a leader then and he looked like he had a grip on the world. But when I did arrive I saw it was only a beginning.
 
@@ -279,7 +279,7 @@ I shot him.
 {: .chapternumber .no_toc}
 
 ###The Carbon Paper
-{: .chapternumber }
+{: .chaptertitle }
 
 Barnes finished his story as the train was crashing over the switches of the Grand Central. When they reached the station, the banker reached out his wrists for the handcuffs, but Thorne apparently didn’t see the movement, as he led the way out.
 
