--- a/_posts/2015-08-31-two-bells.md
+++ b/_posts/2015-08-31-two-bells.md
@@ -32,7 +32,7 @@ epub: LINK TO EPUB
 {: .chapternumber .no_toc}
 
 ###The Avenger
-{: .chapternumber }
+{: .chaptertitle }
 
 At two bells The Boy determined to commit murder.
 
@@ -139,7 +139,7 @@ He rose, the movement bringing into visible play the thick, heavy-corded muscles
 {: .chapternumber .no_toc}
 
 ###Dead About An Hour
-{: .chapternumber }
+{: .chaptertitle }
 
 The sharp cutwater of the Libertine broke the phosphorus into javelins of green brilliancy, her yards, slightly checked, ran with easy motions beneath bellied topsail, while the deck-timbers creaked and groaned as the vessel wallowed in the heavy sea.
 
@@ -262,7 +262,7 @@ He smiled grimly. “All right, men; below with him.”
 {: .chapternumber .no_toc}
 
 ###The Thing
-{: .chapternumber }
+{: .chaptertitle }
 
 In the very midst of a dream The Boy was shot into consciousness. For a moment he could not remember where he was. He seemed to be caught in the teeth of a monster that shook him horribly, mercilessly. Half-remembered objects separated themselves from the chaos and he heard a distant voice pronouncing his name. Yet for some inexplicable reason he was unable to reply.
 
@@ -393,7 +393,7 @@ Then the world reeled, a drunken universe—
 {: .chapternumber .no_toc}
 
 ###Off The Course
-{: .chapternumber }
+{: .chaptertitle }
 
 A knock on the door of his quarters brought Cardigan out of a light sleep. Sitting up on the edge of his bunk he called, “Come in!”
 
@@ -604,7 +604,7 @@ Dark sluicegates closed upon him.
 {: .chapternumber .no_toc}
 
 ###Do Dead Men Laugh
-{: .chapternumber }
+{: .chaptertitle }
 
 “’Ere she goes, mateys—look!”
 
