--- a/_posts/2015-08-31-two-bells.md
+++ b/_posts/2015-08-31-two-bells.md
@@ -11,8 +11,8 @@ image: /assets/img/two-bells.svg
 genre: Adventure
 wordcount: 8881
 timetoread: EST TIME TO READ
-kindle: LINK TO KINDLE
-epub: LINK TO EPUB
+kindle: https://s3.amazonaws.com/talesofmurder.com/shortstories/Two_Bells.mobi
+epub: https://s3.amazonaws.com/talesofmurder.com/shortstories/Two_Bells.epub
 --- 
 
 <section id="toc" class="toc">
@@ -25,11 +25,14 @@ epub: LINK TO EPUB
 </div>
 </section> <!-- table-of-contents -->
 
+<h6 class="btt"><a href="#top">Back to Top</a></h6>
+<hr>
+
 ###Chapter 1
 {: .chapternumber .no_toc}
 
 ###The Avenger
-{: .chaptertitle }
+{: .chaptertitle}
 
 At two bells The Boy determined to commit murder.
 
@@ -41,13 +44,13 @@ The avenger. That was his role. Tonight he would become the champion of his slai
 
 As he stood there on the deck, swaying with the drunken pitch of the two-masted, square-rigged vessel, it all came back to him—came back for the millionth time, with a burning sharpness that made him visualize, as though etched with steel upon his brain, the lamp-lit Australian water-front, the slinking shadows along the quay; made him feel, as if experiencing again, the sickening emotions following the blow and the return to consciousness in the hold of the trading brig bound for eleven degrees south of the equator.
 
-‘Til break you yet, boy—I’ll grind you under my feet—”
+“I’ll break you yet, boy—I’ll grind you under my feet—”
 
 That was Black Michael’s threat when he sought to resist the big-fisted, rum-loving skipper. Then followed the first flogging, stripped and lashed to the beam. …
 
 The recollection of it was gall in his mouth.
 
-After that life for him consisted chiefly of two things: the lash and rum —the whip to break his body, the liquor to break his brain. These were linked by labors so offensive, so repellent that he welcomed the hours of drunken sleep when for a brief while his senses were drowned in oblivion.
+After that life for him consisted chiefly of two things: the lash and rum — the whip to break his body, the liquor to break his brain. These were linked by labors so offensive, so repellent that he welcomed the hours of drunken sleep when for a brief while his senses were drowned in oblivion.
 
 In all this darkness there were two candles: the friendly attitude of the first mate and the queer companionship of the brig’s mascot, Kerachi, a Rajputana parrakeet.
 
@@ -91,7 +94,7 @@ The leper child came to him then … a blinding flash of spiritual pallor, the s
 
 But Black Michael must die.
 
-Me reached the bunk; looked down upon the indistinct, sprawling figure. A wave of hysteria swept him, swamping his courage. He wanted to run, to throw himself upon his mattress and weep out the sorrows that twisted his heart. But—
+He reached the bunk; looked down upon the indistinct, sprawling figure. A wave of hysteria swept him, swamping his courage. He wanted to run, to throw himself upon his mattress and weep out the sorrows that twisted his heart. But—
 
 … A swing of the blade, a sickening sound … and it was finished. He never released his grip on the hilt; held it as though it were a member of his own body; withdrew it and fell against the door.
 
@@ -99,11 +102,11 @@ For some time he lay with his shoulders pressed to the panels, at bay, facing th
 
 The air on deck seemed to lift from his brain the mantle of a loathsome vapor. Here in the tropic moisture of the night, where the wind swelled amongst the waving spars, his reason returned, swept over him like a cold and shuddersome flood.
 
-He glanced fore and aft. The decks were deserted but- for a lone figure on the poop deck. The watch—he could recognize him—a form planted as a piece of statuary upon the wheel-grating.
+He glanced fore and aft. The decks were deserted but for a lone figure on the poop deck. The watch—he could recognize him—a form planted as a piece of statuary upon the wheel-grating.
 
-He slunk past the forward hatch and climbed the ladder to the fore-poop. A stinging spray, flung over the bowsprit by a long gust of wind, struck his face sharply. It seemed to awaken him to the fact that he still gripped the knife, and with a shudder of repulsion he let it fall to the deck planks. For an instant he stood above it, looking as one fascinated upon the glinting thing; then he touched “it with his bare foot … shivered … and pushed it across the deck until it disappeared over the bow….
+He slunk past the forward hatch and climbed the ladder to the fore-poop. A stinging spray, flung over the bowsprit by a long gust of wind, struck his face sharply. It seemed to awaken him to the fact that he still gripped the knife, and with a shudder of repulsion he let it fall to the deck planks. For an instant he stood above it, looking as one fascinated upon the glinting thing; then he touched it with his bare foot … shivered … and pushed it across the deck until it disappeared over the bow … .
 
-A sobbing breath was drawn from his throat. He turned and fled down- deck—as one pursued by the horrors of the nethermost hell.
+A sobbing breath was drawn from his throat. He turned and fled down-deck—as one pursued by the horrors of the nethermost hell.
 
 Upon reaching his quarters he found the mulatto and the Creole still asleep; the slush-lamp hung from the blackened beam, swaying with the heave of the brig.
 
@@ -123,7 +126,7 @@ He shuddered; swallowed quantities of the liquid fire; drained the bottle and fe
 
 “O, God—” he moaned. Hot tears burned his cheeks as he lay there sobbing in the awful abandonment of drunken grief.
 
-“All hands aft!” shrieked the parrakeet, then began to swear in Hindustani and Mandarin. That was the last thing he heard, the grotesque profanity of the little bird. Like a barque severed from its mooring-lines, his brain was carried downstream on the current of slumber....
+“All hands aft!” shrieked the parrakeet, then began to swear in Hindustani and Mandarin. That was the last thing he heard, the grotesque profanity of the little bird. Like a barque severed from its mooring-lines, his brain was carried downstream on the current of slumber … .
 
 His labored breathing had hardly joined that of the other occupants of the foul place when the big mulatto sat up cautiously, a stealthy, anticipatory smile spreading over his negroid features.
 
@@ -136,7 +139,7 @@ He rose, the movement bringing into visible play the thick, heavy-corded muscles
 {: .chapternumber .no_toc}
 
 ###Dead About An Hour
-{: .chaptertitle }
+{: .chaptertitle}
 
 The sharp cutwater of the Libertine broke the phosphorus into javelins of green brilliancy, her yards, slightly checked, ran with easy motions beneath bellied topsail, while the deck-timbers creaked and groaned as the vessel wallowed in the heavy sea.
 
@@ -148,7 +151,7 @@ At thought of The Boy, the first mate felt a tinge of sympathy. Poor chap. Only 
 
 Four bells jangled out. A moment afterward he saw the big body of Bjornsen, the second mate, emerge from the rear companion.
 
-“Where’s the captain?” inquired Cardigan, as the Norwegian, a great hulk of sunburnt physical manCrook, reached his side and took the wheel.
+“Where’s the captain?” inquired Cardigan, as the Norwegian, a great hulk of sunburnt physical manhood, reached his side and took the wheel.
 
 A faint smile traced itself on the big blonde’s face. “Below in his quarters, I suppose, sir—with a belly full of rum …”
 
@@ -192,13 +195,13 @@ An impalpable mist was drifting in from the dark waste of waters, smoothing out 
 
 Near the forward hatch Cardigan encountered Stearns, the midshipman, a sallow youth of twenty-one or less.
 
-“Go below and send the hands aft, Mr. Stearns,” the mate ordered, “every man Jack of them… Then he moved to the poop-deck where Bjornsen stood as one petrified at the wheel.
+“Go below and send the hands aft, Mr. Stearns,” the mate ordered, “every man Jack of them … Then he moved to the poop-deck where Bjornsen stood as one petrified at the wheel.
 
 “Bjornsen,” he began, “the captain has been murdered, stabbed twice. I have sent for the crew to notify them. I’m in command now and I want your hearty support.”
 
 The Norwegian nodded, his stolid face unaltered.
 
-Five minutes later the crew was assembled below the poop, a nervous, shuffling crowd, looking up with uneasy eyes at the first mate. Scum of the Fast and West they were, washed together on the tides of the Seven Seas.
+Five minutes later the crew was assembled below the poop, a nervous, shuffling crowd, looking up with uneasy eyes at the first mate. Scum of the East and West they were, washed together on the tides of the Seven Seas.
 
 “Are they all here, Mr. Steams?” inquired Cardigan of the midshipman, who was climbing to the poop-deck.
 
@@ -246,7 +249,7 @@ The first mate started in pursuit, but halted as his eyes fell upon a belaying p
 
 Cardigan, followed by several of the crew, reached his side.
 
-“He’s out for some time,” reported the first mate, bending over him. “Two of you lads carry him below and lock him up— But wait!”
+“He’s out for some time,” reported the first mate, bending over him. “Two of you lads carry him below and lock him up — But wait!”
 
 He ran one hand into the rear pocket of the mulatto’s trousers, producing a black leather wallet. Opening it he withdrew a wad of bills, which he swiftly counted and returned to the wallet.
 
@@ -259,7 +262,7 @@ He smiled grimly. “All right, men; below with him.”
 {: .chapternumber .no_toc}
 
 ###The Thing
-{: .chaptertitle }
+{: .chaptertitle}
 
 In the very midst of a dream The Boy was shot into consciousness. For a moment he could not remember where he was. He seemed to be caught in the teeth of a monster that shook him horribly, mercilessly. Half-remembered objects separated themselves from the chaos and he heard a distant voice pronouncing his name. Yet for some inexplicable reason he was unable to reply.
 
@@ -289,7 +292,7 @@ Cardigan closed the door and turned the lamp higher. Mercy of God, thought The B
 
 Something worse than horror reached up and clutched at The Boy’s throat. He half closed his eyes; dared not shut them entirely, for The Thing fascinated him.
 
-“The captain has been murdered,” Cardigan continued. “A few minutes ago I happened on the fore-poop. I dropped a wallet and it fell overside— but fortunately caught in the projecting space under the bowsprit. And when I picked it up I found this with it—”
+“The captain has been murdered,” Cardigan continued. “A few minutes ago I happened on the fore-poop. I dropped a wallet and it fell overside— but fortunately caught in the projecting space under the bowsprit. And when I picked it up I found this with it —”
 
 He withdrew an object from the pocket of his pea-jacket. A cry leaped to The Boy’s lips—died.
 
@@ -297,7 +300,7 @@ There before him, sharp and ugly in the flickering glow of the slush-lamp, was t
 
 “Now come here,” commanded the mate.
 
-He obeyed, the cabin reeling dizzily about him. What use was there of trying to hide the truth now? Cardigan knew and
+He obeyed, the cabin reeling dizzily about him. What use was there of trying to hide the truth now? Cardigan knew and —
 
 “Look,” was the sharp injunction.
 
@@ -305,9 +308,9 @@ And he looked ... at The Thing on the bunk. As he saw the exposed chest a shriek
 
 “No, no!” he cried. “I didn’t stab him twice—I didn’t! Only once, in the dark … and then I ran—” He shuddered. “O, God, what have I said?”
 
-With a broken sob he sank to his knees, burying his face in his hands< An instant later fingers closed over his shoulders and lifted him to his feet— fingers that were not rough but firm and determined.
+With a broken sob he sank to his knees, burying his face in his hands. An instant later fingers closed over his shoulders and lifted him to his feet— fingers that were not rough but firm and determined.
 
-“You said what I wanted to hear,” announced Cardigan. “Look at me, boy… . There … Now, I’m going to question you and I want the truth, the truth—before the God that you just called on… . When did you stab Black Michael?”
+“You said what I wanted to hear,” announced Cardigan. “Look at me, boy … . There … Now, I’m going to question you and I want the truth, the truth—before the God that you just called on… . When did you stab Black Michael?”
 
 “A little after two bells, sir—”
 
@@ -315,7 +318,7 @@ With a broken sob he sank to his knees, burying his face in his hands< An instan
 
 “I …” And there followed a stumbling, detached account of his movements from the time he left the deck until he surrendered to sleep in his bunk in the fo’castle.
 
-“It’s fortunate for you that I found the knife,” remarked Cardigan when he had finished, “for it has your initials upon the hilt. I saw you come on deck twice while I was at the wheel; one time you went near the bowsprit but not until after I found the knife did I attach any importance to it.” He paused, resuming after a moment. “It’s quite evident that two people stabbed the captain—you and an unknown person. But who stabbed him first? Who is the real murderer? These are skeins that must be untangled. All I require of you is a close mouth and an open
+“It’s fortunate for you that I found the knife,” remarked Cardigan when he had finished, “for it has your initials upon the hilt. I saw you come on deck twice while I was at the wheel; one time you went near the bowsprit but not until after I found the knife did I attach any importance to it.” He paused, resuming after a moment. “It’s quite evident that two people stabbed the captain—you and an unknown person. But who stabbed him first? Who is the real murderer? These are skeins that must be untangled. All I require of you is a close mouth and an open eye —”
 
 “Then—then you’re not going to lock me in the brig?”
 
@@ -337,13 +340,13 @@ But how could he ever find out? It all seemed very hopeless… .
 
 As he neared the fo’castle he saw a vertical strip of yellow light cleaving the dark passage from the bulkhead door. Voices within were murmuring in hushed conversation.
 
-He was almost in the opening when a sentence, flung against his ears with the sting of a whip, cemented him to the spot: “I only struck once, I tell you, once—yet there are two wounds. ...”
+He was almost in the opening when a sentence, flung against his ears with the sting of a whip, cemented him to the spot: “I only struck once, I tell you, once—yet there are two wounds … .”
 
 Those words, spoken in a voice that was lowered to a tone just above a whisper, yet strangely familiar, brought forth his breath in a gasp.
 
 He crept nearer the source of light; peered within.
 
-The slush-lamp was turned low, casting flickering shadows as it swung with the motion of’ the brig. Five of the bunks were vacant; the sixth, near another bulkhead-door, opposite The Boy, was occupied.
+The slush-lamp was turned low, casting flickering shadows as it swung with the motion of the brig. Five of the bunks were vacant; the sixth, near another bulkhead-door, opposite The Boy, was occupied.
 
 Moncrief, the Creole, sat on the edge of the bunk, a cigarette between his thin, moist lips, and at his side, face and shoulders hidden by the boatswain’s slender body, was another man. That bunk was used by the Chinese cook, The Boy knew, yet the one who lay there was not the Oriental.
 
@@ -361,7 +364,7 @@ They were talking again.
 
 “God knows what became of it! When he found the body he must have hidden the damned thing—and if I knew where … But no; I’m afraid to try it now. The second wound is what has scared me off; it’s a sign to warn us.” Then he swore a volley of oaths so vile that they burned The Boy’s ears.
 
-“With the captain killed,” went on the voice, after a moment^ “and the first mate disposed of by the incriminating evidence, we could have easily bought the crew over to us. With me in command we could have gone straight to Melbourne for the cargo of rum. McAllister would have paid well when we delivered it to him at Hiva-oa, for when his cursed natives have plenty of rum they do more work—and since the French government has restricted the— Oh, well, what’s the use to talk of it? You got the best of the deal; I had the dirty work of killing the swine. It was too big an undertaking for two men to try——”
+“With the captain killed,” went on the voice, after a moment, “and the first mate disposed of by the incriminating evidence, we could have easily bought the crew over to us. With me in command we could have gone straight to Melbourne for the cargo of rum. McAllister would have paid well when we delivered it to him at Hiva-oa, for when his cursed natives have plenty of rum they do more work—and since the French government has restricted the— Oh, well, what’s the use to talk of it? You got the best of the deal; I had the dirty work of killing the swine. It was too big an undertaking for two men to try—”
 
 “But, m’sieur—”
 
@@ -390,7 +393,7 @@ Then the world reeled, a drunken universe—
 {: .chapternumber .no_toc}
 
 ###Off The Course
-{: .chaptertitle }
+{: .chaptertitle}
 
 A knock on the door of his quarters brought Cardigan out of a light sleep. Sitting up on the edge of his bunk he called, “Come in!”
 
@@ -408,11 +411,13 @@ The midshipman’s sallow face seemed paler than ever; he shifted uneasily from 
 
 “I’m going on deck,” he announced, removing his pea-jacket and cap from a peg on the wall. “Return to your quarters and say nothing to the men of what you’ve seen. ...”
 
-He followed Stearns into the poorly- lighted main cabin, and as the midshipman reached the top of the companion- way, gripping the brass rail to keep from being hurled back by the dangerous roll of the vessel, the mate moved through the lazarette.
+He followed Stearns into the poorly-lighted main cabin, and as the midshipman reached the top of the companion-way, gripping the brass rail to keep from being hurled back by the dangerous roll of the vessel, the mate moved through the lazarette.
 
 Midway in the dark passage leading into the fo’castle he collided with something that sprang away from him and swore lurid oaths.
 
-“Who’s that?” demanded Cardigan. “Hinglish Charlie. ’Oo th’ blurry ’ell’s that?”
+“Who’s that?” demanded Cardigan.
+
+“Hinglish Charlie. ’Oo th’ blurry ’ell’s that?”
 
 “The first mate. Is the cabin boy in the fo’c’s’le?”
 
@@ -446,7 +451,7 @@ The cockney indicated the entrance opposite the bulkhead door, through which ope
 
 “You did, sir—but Hi ayn’t found ’im yet.”
 
-Cardigan whirled about and at that moment a voice behind him shrieked: “Two bells, mate—two bells. ...” The sound brought him around again and the cockney, grinning, pointed to a feathery green body perched on the upper tier of one of the bunks.
+Cardigan whirled about and at that moment a voice behind him shrieked: “Two bells, mate—two bells … .” The sound brought him around again and the cockney, grinning, pointed to a feathery green body perched on the upper tier of one of the bunks.
 
 Cardigan swore as he made his way alone to the main cabin. Damn him, who was this fellow who had slunk past him on deck?
 
@@ -490,7 +495,7 @@ He dropped on his knees to examine the body, and at this juncture someone scramb
 
 The mate led the way from the poop to the long-boat, where a group of men, smears of dark animation in the fog, were struggling at the davits. English Charlie’s voice rose above the clamor as he sang out orders.
 
-“Did you find the cabin-boy, Charlie?” * asked Cardigan, reaching the cockney, who stood with a dripping tarpaulin thrown over his shoulders.
+“Did you find the cabin-boy, Charlie?” asked Cardigan, reaching the cockney, who stood with a dripping tarpaulin thrown over his shoulders.
 
 “No, sir—an’ Hi looked from bow to stern!”
 
@@ -520,9 +525,9 @@ A thought sped like steel through his brain. The Malay knife. He was leaving tha
 
 He made his way to the companion, climbing down the almost inverted stairs into the main cabin, where the water reached his waist.
 
-Trusting more to his sense of direction than his outstretched hands, he groped his way aft, beneath the decks, to the paint-locker. In the misty ghost- light that spilled through the nearly demolished deck above he found the nail- riven iron door and drew back the bolt.
+Trusting more to his sense of direction than his outstretched hands, he groped his way aft, beneath the decks, to the paint-locker. In the misty ghost-light that spilled through the nearly demolished deck above he found the nail-riven iron door and drew back the bolt.
 
-With a shriek of hinges it swung out —spitting a large object in the waist- deep flood. Cardigan swore aloud as he perceived it to be a human body; bent over; lifted it; cursed again.
+With a shriek of hinges it swung out —spitting a large object in the waist-deep flood. Cardigan swore aloud as he perceived it to be a human body; bent over; lifted it; cursed again.
 
 It was the cabin-boy—bound and gagged!
 
@@ -530,7 +535,7 @@ In the half-light he could see the mutely imploring eyes—dark pools of pain. W
 
 “… God, sir,” burst out The Boy, “they knocked me in the head, ’Poleon Moncrief and another … I couldn’t see his face, but he said—”
 
-“Tell me later,” cut in Cardigan. “We haven’t time now; the ship’s sinking… . Can you walk? … I’ll help you…
+“Tell me later,” cut in Cardigan. “We haven’t time now; the ship’s sinking… . Can you walk? … I’ll help you…”
 
 The mate half-dragged The Boy along the passage and into the main cabin; here he set him on his feet and thrust him toward the vague gray light in the companionway.
 
@@ -566,15 +571,15 @@ Then a thing occurred that drew The Boy’s heart into his throat: a human hand 
 
 The blood in The Boy’s veins seemed for the moment sucked up. The voice! Pain had weakened it to scarcely above a whisper, but he recognized it, this voice that he would remember until Death wiped free his brain.
 
-“I’m coming!” he answered, suffused With fright and joy.
+“I’m coming!” he answered, suffused with fright and joy.
 
 As he moved forward a sudden lurch of the brig sent the lamp crashing against the bulkhead. He stumbled; clutched at something tangible; clung. With a sense of aching despair he realized that he was denied the sight of—
 
-Darkness had hardly shut its jaws upon the foul hole when the parrakeet shrieked: “Two bells, mate, two bells … “
+Darkness had hardly shut its jaws upon the foul hole when the parrakeet shrieked: “Two bells, mate, two bells … ”
 
 An instant of frightful silence came on the heels of the bird’s speech, then: “God, how did you know?” shrilled the voice. “That was when I stabbed him. … As I pulled the knife out two bells struck… . ”
 
-The Boy felt a sudden quiver of the planks beneath his feet, heard a ripping sound forward … and a sudden convulsion of the water flung him backward. Terrified, he regained his balance and groped until he found and pulled himself through the bulkhead- door.
+The Boy felt a sudden quiver of the planks beneath his feet, heard a ripping sound forward … and a sudden convulsion of the water flung him backward. Terrified, he regained his balance and groped until he found and pulled himself through the bulkhead-door.
 
 How he made the main cabin he never knew. After a period of breathless struggle, bruised and hurt, almost strangled by the deepening flood, he reached the foot of the now inverted companion-stairs and began to climb.
 
@@ -586,7 +591,7 @@ Buoying himself upward, battling against the legions of water, he strove to atta
 
 The ceiling of the cabin. Trapped.
 
-A fierce exultation possessed him— the glory of struggle. He tried to fight, but the liquid death crushed him. He screamed—was choked. He knew the torture of suffocation, a seemingly endless period of terror and pain such as he had never known, even when the lash of Black Michael curled about his bare skin; and a vivid, blinding flash of the concentrated events of many years leaped like hundred-hued lightnings athwart his drowning eyes.
+A fierce exultation possessed him — the glory of struggle. He tried to fight, but the liquid death crushed him. He screamed—was choked. He knew the torture of suffocation, a seemingly endless period of terror and pain such as he had never known, even when the lash of Black Michael curled about his bare skin; and a vivid, blinding flash of the concentrated events of many years leaped like hundred-hued lightnings athwart his drowning eyes.
 
 In the midst of this glow, surrounded by tiny reeling stars, he saw The White Lotus … burning with the fire of palest moons—a figure that faded, became as destroyed moonlight, a vanishing glory that perished the very instant that it flashed to light his way.
 
@@ -601,7 +606,7 @@ Dark sluicegates closed upon him.
 {: .chapternumber .no_toc}
 
 ###Do Dead Men Laugh
-{: .chaptertitle }
+{: .chaptertitle}
 
 “’Ere she goes, mateys—look!”
 
@@ -609,7 +614,7 @@ That was the first thing that Cardigan heard, a sentence that clove the fabric o
 
 He felt intermittent sprays upon his face and tried to struggle to a sitting position, but an intense burning in his skull made him fall back. He opened his lips.
 
-“Charlie … where are you ?”
+“Charlie … where are you?”
 
 An instant afterward a huge face, seeming wraithlike in the fog, materialized in the dusky vacancy above him.
 
